@@ -1,3 +1,12 @@
+2008-02-22  Mike Krüger <mkrueger@novell.com> 
+
+	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
+	  MonoDevelop.SourceEditor.mdp,
+	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
+	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
+	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on clipboard ring
+	  and completion window now closes when switching the desktop.
+
 2008-02-21  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 363327 - Too
